# jikan-rs

./: Cargo.toml  LICENSE  README.md  out.json  out.txt
src/: lib.rs
src/anime/: characters.rs  episodes.rs  metadata.rs  mod.rs  related.rs
src/genres/: anime_genres.rs  manga_genres.rs  mod.rs
src/models/: anime.rs  characters.rs  episodes.rs  genres.rs  list.rs  mod.rs  related.rs  schedule.rs
src/schedules/: mod.rs
src/seasons/: mod.rs
src/top/: mod.rs
