[package]
name = "jikan-rs"
version = "1.0.0"
edition = "2024"
authors = ["yukiisen <yukii.senp@gmail.com>"]
license = "MIT"
description = "A basic wrapper for jikan.moe API"
repository = "https://github.com/yukiisen/jikan-rs"
keywords = ["anime", "manga", "jikan", "api"]
categories = ["API wrapper"]
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

